<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Automatique</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="changes_since_yesterday">Since Yesterday</string>
    <string name="changes_last_7_days">Last 7 days</string>
    <string name="changes_last_30_days">Last 30 days</string>
    <string name="changes_last_90_days">Last 90 days</string>
    <string name="title_activity_summary">Account summary</string>
    <string name="action_save">SAVE</string>
    <string name="default_portfolio">None</string>
    <string name="any_value">Any</string>
    <string-array name="drawer_items">
        <item>Account</item>
        <item>Portfolios</item>
        <item>Your Notes</item>
    </string-array>
    <string name="title_activity_strategies">Strategies</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_new_strategy">New Strategy</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="home">Home</string>
    <string name="strategy_name_edit_text_placeholder">Strategy name</string>
    <string name="InvestmentAmountPerNote">Investment amount per note</string>
    <string name="TargetPortfolio">Target portfolio</string>
    <string name="StrategyFilters">Filters</string>
    <string name="MaxOrdersPerDay">Buy maximum notes per day</string>
    <string name="title_activity_changes">Activity</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="AppDisclaimer">This App is not affiliated nor endorsed by Lending Club®. Your Lending Club® Investor ID and API Key is stored only on the phone and transmitted only to Lending Club® servers from the phone, and never to our server. Developers are providing this App as is and doesn’t guarantee any functionality to be correct neither developer can be held for any damages related with this App whatsoever. If you are using this App that means you are agreeing with above conditions.</string>
    <string name="ActivityNoData">We are still building historical information for you, please continue to refresh app every day and check this again in few days.</string>
    <string name="ActivityNoDataForGivenRange">No activity data available for past %1$d %2$s. Please consider widening your search by looking into activity data for large number of days.</string>
    <string name="ActivityDataNotEnoughForSelectedRange">Not enough data available for selected time period. We only have %1$d %2$s of data available yet. Please continue to refresh app every day and check this again in few days.</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome</string>
    <string name="WelcomeText">Please input your Lending Club Investor ID and API Key (case sensitive) to get started.\n\nAPI Key for Lending Club can be found on ‘Settings’ page in your LendingClub.com account.</string>
    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
